--- a/client/templates/employer/profile-emp.html
+++ b/client/templates/employer/profile-emp.html
@@ -33,6 +33,7 @@
 					<div class="content">
 						<h5 class="content-header">Contact</h5>
 						<div class="content">
+							<div><span class="detail-title">Email:</span> {{primaryEmail}}</div>
 							<div><span class="detail-title">Number:</span> +27 {{profile.contact_person_details.contact}}</div>
 						</div>
 					</div>
@@ -58,7 +59,8 @@
 					<div class="content">
 						<div class="profile-picture-wrapper">
 							<div class="profile-picture" style="background-image:url({{profile.picture.regular}});"></div>
-							<input type="file" class="js-image-input" />
+							<i>Not available currently.</i>
+							<!--<input type="file" class="js-image-input" />-->
 						</div>
 					</div>
 				</div>
