--- a/client/templates/job-seeker/profile-js.html
+++ b/client/templates/job-seeker/profile-js.html
@@ -25,6 +25,13 @@
 				</div>
 			</div>
 			<div class="profile-body content">
+				{{#if isSelf _id}}
+					{{#if profile.cv}}{{else}}
+						<div class="profile-page-alert">
+							You currently don't have a CV uploaded. It is required in order for you to be <strong>activated</strong> on <i>Toadit.com</i>.<br />You can upload a CV under '<a href="{{pathFor route='Profile_JS_Edit' _id=this._id}}">Edit Profile</a>'.
+						</div>
+					{{/if}}
+				{{/if}}
 				{{#if profile.progress}}
 					<div style="display:inline-block;width:70%;vertical-align:top;" class="content admin-specific">
 						<h3 class="content-header">Administration Details</h3>
@@ -44,6 +51,7 @@
 					<div class="content">
 						<div><span class="detail-title">Telephone Number:</span> +27 {{profile.personal_details.tel_number}}</div>
 						<div><span class="detail-title">Cell Number:</span> +27 {{profile.personal_details.cell_number}}</div>
+						<div><span class="detail-title">Email Address:</span> {{primaryEmail}}</div>
 					</div>
 				</div>
 				<div class="content login-specific inline">
@@ -60,6 +68,8 @@
 										<a href="{{path}}?download=true" target="_blank"><i class="glyphicon glyphicon-save"></i> Download</a>
 									</div>
 								{{/each}}
+							{{else}}
+								<i>No <strong>CV</strong> to display.</i>
 							{{/if}}
 						</div>
 					</div>
@@ -68,6 +78,8 @@
 						<div class="content">
 							<div><span class="detail-title">Current Job:</span> {{profile.role_requirements.current_job}}</div>
 							<div><span class="detail-title">Desired Job:</span> {{profile.role_requirements.desired_job}}</div>
+							<div><span class="detail-title">SAP Module:</span> {{profile.role_requirements.sap_module}}</div>
+							<div><span class="detail-title">Industry:</span> {{profile.role_requirements.industry}}</div>
 						</div>
 					</div>
 					<div class="content">
@@ -90,6 +102,9 @@
 
 	<template name="Profile_JS_Progress">
 		<div class="progress-wrapper"><!--
+			--><div class="progress-header">
+				<h4><i class="glyphicon glyphicon-check"></i> Account Progress</h4>
+			</div><!--
 		--><div class="progress-ico verified">
 			<div class="verified"><i class="glyphicon glyphicon-ok"></i></div>
 			<div class="details">
@@ -119,6 +134,12 @@
 			</div>
 		</div><!--
 	--></div>
+		<div class="progress-bar-wrapper"><!--
+			--><div class="progress-bar-step"><div><span>1</span> Verified Account</div></div><!--
+			--><div class="progress-bar-step"><div class="{{#if equalsor3 profile.status 'active' 'placed' 'pending'}}{{else}} inactive{{/if}}"><span>2</span> Pending Screening</div></div><!--
+			--><div class="progress-bar-step"><div class="{{#if equalsor2 profile.status 'active' 'placed'}}{{else}} inactive{{/if}}"><span>3</span> Active Account</div></div><!--
+			--><div class="progress-bar-step"><div class="last-bar {{#if equals profile.status 'placed'}}{{else}} inactive{{/if}}"><span>4</span> Placed</div></div><!--
+		--></div>
 	</template>
 
 <!-- EDIT -->
@@ -180,7 +201,10 @@
 					<div class="content">
 						<div class="profile-picture-wrapper">
 							<div class="profile-picture" style="background-image:url({{profile.picture.regular}});"></div>
-							<!--<input type="file" class="js-image-input" />-->
+							<input type="file" class="js-image-input" />
+							{{#if profile.picture._id}}
+								<a href="" class="js-remove-image">Remove Profile Picture</a>
+							{{/if}}
 						</div>
 					</div>
 				</div>
@@ -205,6 +229,8 @@
 				<div class="content">
 					{{> input seed='abc' session='current-job' label='Current Job' value=profile.role_requirements.current_job type='combobox-other' required=true data=jobs}}
 					{{> input seed='abc' session='desired-job' label='Desired Job' value=profile.role_requirements.desired_job type='combobox-other' required=true data=jobs}}
+					{{> input seed='abc' session='sap-module' label='SAP Module' value=profile.role_requirements.sap_module type='combobox' required=true data=sapModules}}
+					{{> input seed='abc' session='industry' label='Industry' value=profile.role_requirements.industry type='combobox-other' required=true data=industries}}
 				</div>
 				<h5 class="content-header">Salary Details <span style="color:gray;float:right;font-size:14px;">(Monthly Salary)</span></h5>
 				<div class="content">
@@ -241,8 +267,16 @@
 				</div>
 			</div>
 		</div>
-		{{#if pageContainsError}}{{else}}<button class="js-save">Save</button>{{/if}}
-		<button class="js-cancel">Cancel</button>
-		{{#if pageContainsError}}<br /><small style="color:red;"><i><strong>Unable to save</strong> as the page contains errors, see above.</i></small>{{/if}}
+		<div style="margin-bottom:15px;">
+			{{#if pageContainsError}}{{else}}
+				{{#if saving}}
+					<button class="js-save" disabled>Saving...</button>
+				{{else}}
+					<button class="js-save">Save</button>
+				{{/if}}
+			{{/if}}
+			<button class="js-cancel">Cancel</button>
+			{{#if pageContainsError}}<br /><small style="color:red;"><i><strong>Unable to save</strong> as the page contains errors, see above.</i></small>{{/if}}
+		</div>
 	</div>
 </template>
