--- a/client/templates/job-seeker/register-js.html
+++ b/client/templates/job-seeker/register-js.html
@@ -21,7 +21,7 @@
 						{{> passwordRequirements}}
 					</div>
 				</div>
-				<div class="section">
+				<!--<div class="section">
 					<h3>Personal Details</h3>
 					<div class="content">
 						{{> input seed='xfx' label='First Name' placeholder='First Name' session='reg-name' type='text' required=true}}
@@ -63,7 +63,7 @@
 							</span>
 						{{/if}}
 					</div>
-				</div>
+				</div>-->
 				<div class="controls">
 					{{#if equalsor2 true errors processing}}
 						{{#if errors}}
